crates/phux-client/src/render/overlay/snapshots/phux_client__render__overlay__select_list__tests__render_byte_output_is_stable.snap
---
source: crates/phux-client/src/render/overlay/select_list.rs
expression: out
---

       ┌───── command palette ──────┐
       │>                           │
       │                            │
       │split-pane             C-a |│
       │new-window             C-a c│
       │detach                 C-a d│
       │                            │
       │Enter select  ·  Esc cancel │
       │                            │
       └────────────────────────────┘
