crates/phux-client/src/render/overlay/snapshots/phux_client__render__overlay__select_list__tests__render_fleet_shaped_list_is_stable.snap
---
source: crates/phux-client/src/render/overlay/select_list.rs
expression: out
---


          ┌──────── agent fleet ────────┐
          │>                            │
          │                             │
          │work (current)               █
          │  ! 0:main.0 reviewer [claude█
          │  * 0:main.1 builder working █
          │scratch                      │
          │                             │
          │Enter select  ·  Esc cancel  │
          └─────────────────────────────┘
