crates/phux-client/src/render/overlay/snapshots/phux_client__render__overlay__select_list__tests__scrolled_list_render_is_stable.snap
---
source: crates/phux-client/src/render/overlay/select_list.rs
expression: out
---



       ┌───── command palette ──────┐
       │>                           │
       │                            │
       │item-7                      │
       │item-8                      █
       │item-9                      │
       │item-10                     │
       │                            │
       │Enter select  ·  Esc cancel │
       └────────────────────────────┘
